<resources>
    <string name="app_name">MeetingUi</string>
    <string name="schedule_meeting">Schedule Meeting</string>
    <string name="name">Name</string>
    <string name="tue_22_december_2020">Tue- 22 December 2020</string>
    <string name="_11_00_am">11:00 am</string>
    <string name="people_to_invite">People to invite</string>
    <string name="prateek">Prateek</string>
    <string name="prateek_shukla">Prateek Shukla</string>
    <string name="jeff_bezos">Jeff Bezos</string>
    <string name="notify_people_on_slack">Notify people on Slack?</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="todo">TODO</string>
</resources>